--- a/PinewoodTech/PinewoodTechFront/Pages/Views/Customers.cshtml
+++ b/PinewoodTech/PinewoodTechFront/Pages/Views/Customers.cshtml
@@ -32,6 +32,10 @@
                     <td>
                         Email
                     </td>
+                    <td>
+                        Action
+                    </td>
+                    <td></td>
                 </tr>
                 </thead>
                 <tbody>
@@ -45,7 +49,10 @@
                             @customer.Email
                         </td>
                         <td>
-                            <a class="btn btn-primary" href="/customer-edit">Edit</a>
+                            <a class="btn btn-primary" href="/customer-edit/@customer.Id">Edit</a>
+                        </td>
+                        <td>
+                            <button class="btn btn-danger delete-btn" data-id="@customer.Id">Delete</button>
                         </td>
                     </tr>
                 }
@@ -53,8 +60,12 @@
             </table>
         </div>
     </div>
-    <a class=" btn btn-success" href="/customer-add">Add Customer</a>
+    <div class="row justify-content-center">
+        <div class="col text-center">
+            <a class=" btn btn-success" href="/customer-add">Add Customer</a>
+        </div>
+    </div>
 </div>
-<script src="PinewoodTechFront/Javascript/customer-list.js"></script>
+<script src="~/js/customer-delete.js"></script>
 </body>
 </html>
